tests/error/non_function_template.gw
// [contains] template call of non-function value
int test;
test<{int}>();
